# polymarket-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py
clients/: auth_clob.py  clob.py  data.py  gamma.py
tests/: conftest.py  test_clob_tools.py  test_data_tools.py  test_gamma_tools.py  test_trading_tools.py
tools/: clob_tools.py  data_tools.py  gamma_tools.py  trading_tools.py
